--- a/index.html
+++ b/index.html
@@ -11,24 +11,77 @@
     <form id="language">
       <div class="radio">
         <label>
-          <h4> </h4>
-          <input type=radio name="usability" value="1" id="C#">
+          <h4> What do you want to make using a programming language? </h4>
+          <input type=radio name="usability" value="1" id="C#"> Games & Windows desktop apps
         </label>
       </div>
-
         <div class="radio">
           <label>
             <h4> </h4>
-            <input type=radio name="usability" value="2" id="JavaSc">
+            <input type=radio name="usability" value="2" id="JavaSc"> 2D images & 3D animation
           </label>
         </div>
-
         <div class="radio">
           <label>
             <h4> </h4>
-            <input type=radio name="usability" value="3" id="Python">
+            <input type=radio name="usability" value="3" id="Python"> Websites
           </label>
         </div>
+        <div class="radio">
+          <label>
+            <h4> What are your strongest skills?  </h4>
+            <input type=radio name="skills" value="1" id="C#">  logical thinking
+          </label>
+        </div>
+          <div class="radio">
+            <label>
+              <h4> </h4>
+              <input type=radio name="skills" value="2" id="JavaSc"> Good communication skills
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <h4> </h4>
+              <input type=radio name="skills" value="3" id="Python"> Problem solving &  abstract thinking
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <h4> What characteristics do you value the most in a language? </h4>
+              <input type=radio name="characteristics" value="1" id="C#"> Scalability & speed
+            </label>
+          </div>
+            <div class="radio">
+              <label>
+                <h4> </h4>
+                <input type=radio name="characteristics" value="2" id="JavaSc"> Simplicity &  iteroperability
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <h4> </h4>
+                <input type=radio name="characteristics" value="3" id="Python"> Flexibility &  readability
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <h4> What name do you like the most? </h4>
+                <input type=radio name="" value="1" id="C#"> C#
+              </label>
+            </div>
+              <div class="radio">
+                <label>
+                  <h4> </h4>
+                  <input type=radio name="" value="2" id="JavaSc"> JavaScript
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <h4> </h4>
+                  <input type=radio name="" value="3" id="Python"> Python
+                </label>
+              </div>
 
+    </form>
   </body>
 </html>
