add a function that takes user's input and it's value

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="crossorigin="anonymous"></script>
     <script src="js/scripts.js" charset="utf-8"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <title>Language Suggester</title>
   </head>
   <body>
     <div class="container">
+      <h2> What programming language is best for <em> you </em> to learn? </h2>
       <form id="language">
         <div class="radio">
           <label>
-            <h4> What do you want to make using a programming language? </h4>
+            <h5> What do you want to make using a programming language? </h5>
             <input type=radio name="usability" value="1" id="C#"> Games & Windows desktop apps
           </label>
         </div>
@@ -30,7 +31,7 @@
           </div>
           <div class="radio">
             <label>
-              <h4> What are your strongest skills?  </h4>
+              <h5> What are your strongest skills?  </h5>
               <input type=radio name="skills" value="1" id="C#">  logical thinking
             </label>
           </div>
@@ -42,43 +43,39 @@
             </div>
             <div class="radio">
               <label>
-                <h4> </h4>
                 <input type=radio name="skills" value="3" id="Python"> Problem solving &  abstract thinking
               </label>
             </div>
             <div class="radio">
               <label>
-                <h4> What characteristics do you value the most in a language? </h4>
+                <h5> What characteristics do you value the most in a language? </h5>
                 <input type=radio name="characteristics" value="1" id="C#"> Scalability & speed
               </label>
             </div>
               <div class="radio">
                 <label>
-                  <h4> </h4>
+                  <h5> </h5>
                   <input type=radio name="characteristics" value="2" id="JavaSc"> Simplicity &  iteroperability
                 </label>
               </div>
               <div class="radio">
                 <label>
-                  <h4> </h4>
                   <input type=radio name="characteristics" value="3" id="Python"> Flexibility &  readability
                 </label>
               </div>
               <div class="radio">
                 <label>
-                  <h4> What name do you like the most? </h4>
+                  <h5> What name do you like the most? </h5>
                   <input type=radio name="" value="1" id="C#"> C#
                 </label>
               </div>
                 <div class="radio">
                   <label>
-                    <h4> </h4>
                     <input type=radio name="" value="2" id="JavaSc"> JavaScript
                   </label>
                 </div>
                 <div class="radio">
                   <label>
-                    <h4> </h4>
                     <input type=radio name="" value="3" id="Python"> Python
                   </label>
                 </div>
