finish working on branching and show the right results

--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
               <div class="radio">
                 <label>
                   <h5> What name do you like the most? </h5>
-                  <input type=radio name="" value="1" id="C#"> C#
+                  <input type=radio name="name" value="1" id="C#"> C#
                 </label>
               </div>
                 <div class="radio">
                   <label>
-                    <input type=radio name="" value="2" id="JavaSc"> JavaScript
+                    <input type=radio name="name" value="2" id="JavaSc"> JavaScript
                   </label>
                 </div>
                 <div class="radio">
                   <label>
-                    <input type=radio name="" value="3" id="Python"> Python
+                    <input type=radio name="name" value="3" id="Python"> Python
                   </label>
                 </div>
                 <button type="submit" name="button">Enter</button>
