still working on css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h2> What programming language is best for <em> you </em> to learn? </h2>
+      <h2> What programming language should you learn? </h2> <br>
       <form id="language">
         <div class="radio">
           <label>
@@ -19,16 +19,14 @@
         </div>
           <div class="radio">
             <label>
-              <h4> </h4>
               <input type=radio name="usability" value="2" id="JavaSc"> 2D images & 3D animation
             </label>
           </div>
           <div class="radio">
             <label>
-              <h4> </h4>
               <input type=radio name="usability" value="3" id="Python"> Websites
             </label>
-          </div>
+          </div> <br>
           <div class="radio">
             <label>
               <h5> What are your strongest skills?  </h5>
@@ -45,7 +43,7 @@
               <label>
                 <input type=radio name="skills" value="3" id="Python"> Problem solving &  abstract thinking
               </label>
-            </div>
+            </div> <br>
             <div class="radio">
               <label>
                 <h5> What characteristics do you value the most in a language? </h5>
@@ -62,7 +60,7 @@
                 <label>
                   <input type=radio name="characteristics" value="3" id="Python"> Flexibility &  readability
                 </label>
-              </div>
+              </div> <br>
               <div class="radio">
                 <label>
                   <h5> What name do you like the most? </h5>
