finilize the project

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h2> What programming language should you learn? </h2> <br>
+      <h4> What programming language should you learn? </h4> <br>
       <form id="language">
         <div class="radio">
           <label>
@@ -80,11 +80,12 @@
                 <button type="submit" name="button">Enter</button>
       </form>
       <div id="cresult" class=".text-secondary">
+        <img src="img/terminal.png" alt="terminal" class="terminal">
        <strong class="text-primary">You should learn C#! Exciding!</strong>
        <img src="img/csh.png" height="150" width="150" alt="c sharp label" class="float">
-       <h4>C# is an object-oriented programming language from Microsoft that aims to combine the computing power of C++ with the programming ease of Visual Basic.
+       <p class ="text">C# is an object-oriented programming language from Microsoft that aims to combine the computing power of C++ with the programming ease of Visual Basic.
            C# is based on C++ and contains features similar to those of Java.
-       </h4>
+       </p>
    </div>
    <div id="javascresult" class=".text-secondary">
        <strong class="text-primary"> You should learn JavaScript! Good luck with that one!</strong>
