--- a/index.html
+++ b/index.html
@@ -27,10 +27,29 @@
               <input type=radio name="usability" value="3" id="Python"> Websites
             </label>
           </div> <br>
+          <div id="cresult" class=".text-secondary">
+           <strong class="text-primary">You should learn C#! Exciding!</strong>
+           <img src="img/csh.png" height="150" width="150" alt="c sharp label" class="float">
+           <p class ="text"><h5>C# is an object-oriented programming language from Microsoft that aims to combine the computing power of C++ with the programming ease of Visual Basic.
+               C# is based on C++ and contains features similar to those of Java.</h5></p>
+             </div>
+               <div id="javascresult" class=".text-secondary">
+                 <strong class="text-primary"> You should learn JavaScript! Good luck with that one!</strong>
+                 <img src="img/js.png"  height="150" width="150" alt="java script label" class="float">
+                 <h5>JavaScript® (often shortened to JS) is a lightweight, interpreted, object-oriented language with first-class functions, and is best known as the scripting language for Web pages,
+                   but it's used in many non-browser environments as well. It is a prototype-based, multi-paradigm scripting language that is dynamic, and supports object-oriented, imperative, and functional programming styles.
+                 </h5> </div>
+         <div id="pythonresult" class=".text-secondary">
+           <strong class="text-primary">You should learn Python!</strong>
+           <img src="img/python.png" height="150" width="150" alt="python label" class="float">
+           <h5> Python is a widely used general-purpose, high level programming language.
+             It was initially designed by Guido van Rossum in 1991 and developed by Python Software Foundation. It was mainly developed for emphasis on code readability, and its syntax allows programmers to express concepts in fewer lines of code.
+           </h5>
+         </div>
           <div class="radio">
             <label>
               <h5> What are your strongest skills?  </h5>
-              <input type=radio name="skills" value="1" id="C#">  logical thinking
+              <input type=radio name="skills" value="1" id="C#"> logical thinking
             </label>
           </div>
             <div class="radio">
@@ -79,28 +98,8 @@
                 </div>
                 <button type="submit" name="button">Enter</button>
       </form>
-      <div id="cresult" class=".text-secondary">
-        <img src="img/terminal.png" alt="terminal" class="terminal">
-       <strong class="text-primary">You should learn C#! Exciding!</strong>
-       <img src="img/csh.png" height="150" width="150" alt="c sharp label" class="float">
-       <p class ="text">C# is an object-oriented programming language from Microsoft that aims to combine the computing power of C++ with the programming ease of Visual Basic.
-           C# is based on C++ and contains features similar to those of Java.
-       </p>
+
    </div>
-   <div id="javascresult" class=".text-secondary">
-       <strong class="text-primary"> You should learn JavaScript! Good luck with that one!</strong>
-       <img src="img/js.png"  height="150" width="150" alt="java script label" class="float">
-       <h4>JavaScript® (often shortened to JS) is a lightweight, interpreted, object-oriented language with first-class functions, and is best known as the scripting language for Web pages,
-           but it's used in many non-browser environments as well. It is a prototype-based, multi-paradigm scripting language that is dynamic, and supports object-oriented, imperative, and functional programming styles.
-       </h4>
-   </div>
-   <div id="pythonresult" class=".text-secondary">
-       <strong class="text-primary">You should learn Python!</strong>
-       <img src="img/python.png" height="150" width="150" alt="python label" class="float">
-       <h4> Python is a widely used general-purpose, high level programming language.
-           It was initially designed by Guido van Rossum in 1991 and developed by Python Software Foundation. It was mainly developed for emphasis on code readability, and its syntax allows programmers to express concepts in fewer lines of code.
-       </h4>
-    </div>
 
   </body>
 </html>
