--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Language Suggester</title>
   </head>
-  <body>
+  <body> <br>
+    <h3> What programming language should you learn? </h3> <br>
     <div class="container">
-      <h4> What programming language should you learn? </h4> <br>
       <form id="language">
         <div class="radio">
           <label>
@@ -28,33 +28,32 @@
             </label>
           </div> <br>
           <div id="cresult" class=".text-secondary">
-           <strong class="text-primary">You should learn C#! Exciding!</strong>
+           <h4 class="text-primary">You should learn C#! Exciding!</h4>
            <img src="img/csh.png" height="150" width="150" alt="c sharp label" class="float">
-           <p class ="text"><h5>C# is an object-oriented programming language from Microsoft that aims to combine the computing power of C++ with the programming ease of Visual Basic.
-               C# is based on C++ and contains features similar to those of Java.</h5></p>
+           <p class ="text"><p>C# is an object-oriented programming language from Microsoft that aims to combine the computing power of C++ with the programming ease of Visual Basic.
+               C# is based on C++ and contains features similar to those of Java.</p>
              </div>
                <div id="javascresult" class=".text-secondary">
-                 <strong class="text-primary"> You should learn JavaScript! Good luck with that one!</strong>
+                 <h4 class="text-primary"> You should learn JavaScript! Good luck with that one!</h4>
                  <img src="img/js.png"  height="150" width="150" alt="java script label" class="float">
-                 <h5>JavaScript® (often shortened to JS) is a lightweight, interpreted, object-oriented language with first-class functions, and is best known as the scripting language for Web pages,
+                 <p>JavaScript® (often shortened to JS) is a lightweight, interpreted, object-oriented language with first-class functions, and is best known as the scripting language for Web pages,
                    but it's used in many non-browser environments as well. It is a prototype-based, multi-paradigm scripting language that is dynamic, and supports object-oriented, imperative, and functional programming styles.
-                 </h5> </div>
+                 </p> </div>
          <div id="pythonresult" class=".text-secondary">
-           <strong class="text-primary">You should learn Python!</strong>
+           <h4 class="text-primary">You should learn Python!</h4>
            <img src="img/python.png" height="150" width="150" alt="python label" class="float">
-           <h5> Python is a widely used general-purpose, high level programming language.
+           <p> Python is a widely used general-purpose, high level programming language.
              It was initially designed by Guido van Rossum in 1991 and developed by Python Software Foundation. It was mainly developed for emphasis on code readability, and its syntax allows programmers to express concepts in fewer lines of code.
-           </h5>
+           </p>
          </div>
           <div class="radio">
             <label>
               <h5> What are your strongest skills?  </h5>
-              <input type=radio name="skills" value="1" id="C#"> logical thinking
+              <input type=radio name="skills" value="1" id="C#"> Logical thinking
             </label>
           </div>
             <div class="radio">
               <label>
-                <h4> </h4>
                 <input type=radio name="skills" value="2" id="JavaSc"> Good communication skills
               </label>
             </div>
@@ -96,7 +95,7 @@
                     <input type=radio name="name" value="3" id="Python"> Python
                   </label>
                 </div>
-                <button type="submit" name="button">Enter</button>
+                <button type="submit" name="button">Result</button>
       </form>
 
    </div>
