--- a/index.html
+++ b/index.html
@@ -8,97 +8,91 @@
     <title>Language Suggester</title>
   </head>
   <body> <br>
-    <h3> What programming language should you learn? </h3> <br>
+    <h3> Which programming language should you learn? </h3> <br>
     <div class="container">
       <form id="language">
         <div class="radio">
           <label>
-            <h5> What do you want to make using a programming language? </h5>
+            <h5> What do you want to be making using a programming language? </h5>
             <input type=radio name="usability" value="1" id="C#"> Games & Windows desktop apps
           </label>
         </div>
-          <div class="radio">
-            <label>
-              <input type=radio name="usability" value="2" id="JavaSc"> 2D images & 3D animation
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type=radio name="usability" value="3" id="Python"> Websites
-            </label>
-          </div> <br>
-          <div id="cresult" class=".text-secondary">
+        <div class="radio">
+          <label>
+            <input type=radio name="usability" value="2" id="JavaSc"> 2D images & 3D animation
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type=radio name="usability" value="3" id="Python"> Websites
+          </label>
+        </div> <br>
+        <div id="cresult" class=".text-secondary">
            <h4 class="text-primary">You should learn C#! Exciding!</h4>
            <img src="img/csh.png" height="150" width="150" alt="c sharp label" class="float">
-           <p class ="text"><p>C# is an object-oriented programming language from Microsoft that aims to combine the computing power of C++ with the programming ease of Visual Basic.
-               C# is based on C++ and contains features similar to those of Java.</p>
-             </div>
-               <div id="javascresult" class=".text-secondary">
-                 <h4 class="text-primary"> You should learn JavaScript! Good luck with that one!</h4>
-                 <img src="img/js.png"  height="150" width="150" alt="java script label" class="float">
-                 <p>JavaScript® (often shortened to JS) is a lightweight, interpreted, object-oriented language with first-class functions, and is best known as the scripting language for Web pages,
-                   but it's used in many non-browser environments as well. It is a prototype-based, multi-paradigm scripting language that is dynamic, and supports object-oriented, imperative, and functional programming styles.
-                 </p> </div>
-         <div id="pythonresult" class=".text-secondary">
-           <h4 class="text-primary">You should learn Python!</h4>
-           <img src="img/python.png" height="150" width="150" alt="python label" class="float">
-           <p> Python is a widely used general-purpose, high level programming language.
-             It was initially designed by Guido van Rossum in 1991 and developed by Python Software Foundation. It was mainly developed for emphasis on code readability, and its syntax allows programmers to express concepts in fewer lines of code.
-           </p>
-         </div>
-          <div class="radio">
-            <label>
-              <h5> What are your strongest skills?  </h5>
-              <input type=radio name="skills" value="1" id="C#"> Logical thinking
-            </label>
-          </div>
-            <div class="radio">
-              <label>
-                <input type=radio name="skills" value="2" id="JavaSc"> Good communication skills
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type=radio name="skills" value="3" id="Python"> Problem solving &  abstract thinking
-              </label>
-            </div> <br>
-            <div class="radio">
-              <label>
-                <h5> What characteristics do you value the most in a language? </h5>
-                <input type=radio name="characteristics" value="1" id="C#"> Scalability & speed
-              </label>
-            </div>
-              <div class="radio">
-                <label>
-                  <h5> </h5>
-                  <input type=radio name="characteristics" value="2" id="JavaSc"> Simplicity &  iteroperability
-                </label>
-              </div>
-              <div class="radio">
-                <label>
-                  <input type=radio name="characteristics" value="3" id="Python"> Flexibility &  readability
-                </label>
-              </div> <br>
-              <div class="radio">
-                <label>
-                  <h5> What name do you like the most? </h5>
-                  <input type=radio name="name" value="1" id="C#"> C#
-                </label>
-              </div>
-                <div class="radio">
-                  <label>
-                    <input type=radio name="name" value="2" id="JavaSc"> JavaScript
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type=radio name="name" value="3" id="Python"> Python
-                  </label>
-                </div>
-                <button type="submit" name="button">Result</button>
+           <p class ="text"><p>C# is an object-oriented programming language from Microsoft that aims to combine the computing power of C++ with the programming ease of Visual Basic.C# is based on C++ and contains features similar to those of Java.</p>
+        </div>
+        <div id="javascresult" class=".text-secondary">
+         <h4 class="text-primary"> You should learn JavaScript! Good luck with that one!</h4>
+         <img src="img/js.png"  height="150" width="150" alt="java script label" class="float">
+         <p>JavaScript® (often shortened to JS) is a lightweight, interpreted, object-oriented language with first-class functions, and is best known as the scripting language for Web pages,but it's used in many non-browser environments as well. It is a prototype-based, multi-paradigm scripting language that is dynamic, and supports object-oriented, imperative, and functional programming styles.</p>
+        </div>
+        <div id="pythonresult" class=".text-secondary">
+         <h4 class="text-primary">You should learn Python!</h4>
+         <img src="img/python.png" height="150" width="150" alt="python label" class="float">
+         <p> Python is a widely used general-purpose, high level programming language.It was initially designed by Guido van Rossum in 1991 and developed by Python Software Foundation. It was mainly developed for emphasis on code readability, and its syntax allows programmers to express concepts in fewer lines of code.</p>
+        </div>
+        <div class="radio">
+          <label>
+            <h5> What are your strongest skills?  </h5>
+            <input type=radio name="skills" value="1" id="C#"> Logical thinking
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type=radio name="skills" value="2" id="JavaSc"> Good communication skills
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type=radio name="skills" value="3" id="Python"> Problem solving &  abstract thinking
+          </label>
+        </div> <br>
+        <div class="radio">
+          <label>
+            <h5> What characteristics do you value the most in a language? </h5>
+            <input type=radio name="characteristics" value="1" id="C#"> Scalability & speed
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <h5> </h5>
+            <input type=radio name="characteristics" value="2" id="JavaSc"> Simplicity &  iteroperability
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type=radio name="characteristics" value="3" id="Python"> Flexibility &  readability
+          </label>
+        </div> <br>
+        <div class="radio">
+          <label>
+            <h5> What name do you like the most? </h5>
+            <input type=radio name="name" value="1" id="C#"> C#
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type=radio name="name" value="2" id="JavaSc"> JavaScript
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type=radio name="name" value="3" id="Python"> Python
+          </label>
+        </div>
+        <button type="submit" name="button">Result</button>
       </form>
-
    </div>
-
   </body>
 </html>
